add gui, correct colors

--- a/process_data.ipynb
+++ b/process_data.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,90 +32,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 108,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>blue</th>\n",
-       "      <th>green</th>\n",
-       "      <th>red</th>\n",
-       "      <th>label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>68</th>\n",
-       "      <td>84</td>\n",
-       "      <td>166</td>\n",
-       "      <td>0</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>17</td>\n",
-       "      <td>198</td>\n",
-       "      <td>248</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>67</th>\n",
-       "      <td>0</td>\n",
-       "      <td>153</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>61</th>\n",
-       "      <td>27</td>\n",
-       "      <td>83</td>\n",
-       "      <td>255</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>55</th>\n",
-       "      <td>200</td>\n",
-       "      <td>144</td>\n",
-       "      <td>73</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    blue  green  red  label\n",
-       "68    84    166    0      8\n",
-       "32    17    198  248      2\n",
-       "67     0    153    0      7\n",
-       "61    27     83  255      1\n",
-       "55   200    144   73     10"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "PH_COUNT = 15\n",
     "images_list = []\n",
@@ -129,18 +48,30 @@
     "# transform data to pandas DataFrame\n",
     "df = pd.DataFrame(np.asarray(images_list),columns=['blue','green','red','label'])\n",
     "df = shuffle(df)\n",
-    "df.head()"
+    "# df.head(-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 107,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14  0  1  2  3  4  5  6  7  8\n",
+      "  9 10 11 12 13 14  0  1  2  3  4  5  6  7  8  9 10 11 12 13 14  0  1  2\n",
+      "  3  4  5  6  7  8  9 10 11 12 13 14  0  1  2  3  4  5  6  7  8  9 10 11\n",
+      " 12 13 14  0  1  2  3  4  5  6  7  8  9 10 11 12 13 14  0  1  2  3  4  5\n",
+      "  6  7  8  9 10 11 12 13 14]\n"
+     ]
+    }
+   ],
    "source": [
     "y = np.array(df['label']) \n",
     "X = np.array(df.drop(['label'], axis=1))\n",
-    "# print(X)"
+    "print(y)"
    ]
   },
   {
@@ -152,16 +83,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((94, 3), (11, 3), (94,), (11,))"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "SIZE = X.shape[0]\n",
-    "TRAIN_SIZE = int(SIZE*0.8)\n",
+    "TRAIN_SIZE = int(SIZE*0.9)\n",
     "train_x = X[:TRAIN_SIZE]\n",
     "train_y = y[:TRAIN_SIZE]\n",
     "test_x = X[TRAIN_SIZE:]\n",
-    "test_y = y[TRAIN_SIZE:]"
+    "test_y = y[TRAIN_SIZE:]\n",
+    "train_x.shape, test_x.shape, train_y.shape, test_y.shape"
    ]
   },
   {
@@ -170,117 +113,184 @@
    "source": [
     "# Testing machine learning algorithms\n",
     "\n",
-    "***\n",
-    "\n",
-    " svm -> very bad results\n",
-    "\n",
-    "decision tree -> accuracy 0.57%, add 1 point mistake -> accuracy 0,95% \n",
-    "\n",
-    "gredient boosting classifier -> accuracy 0.47%"
+    "***\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### GradientBoostingRegressor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 92,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import tree\n",
+    "from sklearn.ensemble import GradientBoostingRegressor\n",
+    "# clf = GradientBoostingRegressor()\n",
+    "# clf.fit(train_x, train_y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### RandomForestRegressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "GradientBoostingRegressor(alpha=0.9, criterion='friedman_mse', init=None,\n",
-       "             learning_rate=0.1, loss='ls', max_depth=3, max_features=None,\n",
-       "             max_leaf_nodes=None, min_impurity_decrease=0.0,\n",
-       "             min_impurity_split=None, min_samples_leaf=1,\n",
-       "             min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
-       "             n_estimators=100, presort='auto', random_state=None,\n",
-       "             subsample=1.0, verbose=0, warm_start=False)"
+       "RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=None,\n",
+       "           max_features='auto', max_leaf_nodes=None,\n",
+       "           min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "           min_samples_leaf=1, min_samples_split=2,\n",
+       "           min_weight_fraction_leaf=0.0, n_estimators=10, n_jobs=1,\n",
+       "           oob_score=False, random_state=None, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn import tree\n",
-    "from sklearn.ensemble import GradientBoostingClassifier\n",
-    "from sklearn.ensemble import GradientBoostingRegressor\n",
-    "clf = GradientBoostingRegressor()\n",
+    "from sklearn.ensemble import RandomForestRegressor, RandomForestClassifier\n",
+    "clf = RandomForestRegressor()\n",
+    "clf.fit(train_x, train_y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### GradientBoostingRegressor with tuning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "max_features must be in (0, n_features]",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-156-92b096658e20>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m clf = GradientBoostingRegressor(loss='lad', learning_rate=0.2,\n\u001b[0;32m      2\u001b[0m                                max_depth=4, max_features=15)\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mclf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrain_x\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrain_y\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mc:\\users\\asus\\appdata\\local\\programs\\python\\python3.6.5\\lib\\site-packages\\sklearn\\ensemble\\gradient_boosting.py\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, X, y, sample_weight, monitor)\u001b[0m\n\u001b[0;32m   1032\u001b[0m         \u001b[1;31m# fit the boosting stages\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1033\u001b[0m         n_stages = self._fit_stages(X, y, y_pred, sample_weight, random_state,\n\u001b[1;32m-> 1034\u001b[1;33m                                     begin_at_stage, monitor, X_idx_sorted)\n\u001b[0m\u001b[0;32m   1035\u001b[0m         \u001b[1;31m# change shape of arrays after fit (early-stopping or additional ests)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1036\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mn_stages\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mestimators_\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\users\\asus\\appdata\\local\\programs\\python\\python3.6.5\\lib\\site-packages\\sklearn\\ensemble\\gradient_boosting.py\u001b[0m in \u001b[0;36m_fit_stages\u001b[1;34m(self, X, y, y_pred, sample_weight, random_state, begin_at_stage, monitor, X_idx_sorted)\u001b[0m\n\u001b[0;32m   1087\u001b[0m             y_pred = self._fit_stage(i, X, y, y_pred, sample_weight,\n\u001b[0;32m   1088\u001b[0m                                      \u001b[0msample_mask\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrandom_state\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX_idx_sorted\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1089\u001b[1;33m                                      X_csc, X_csr)\n\u001b[0m\u001b[0;32m   1090\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1091\u001b[0m             \u001b[1;31m# track deviance (= loss)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\users\\asus\\appdata\\local\\programs\\python\\python3.6.5\\lib\\site-packages\\sklearn\\ensemble\\gradient_boosting.py\u001b[0m in \u001b[0;36m_fit_stage\u001b[1;34m(self, i, X, y, y_pred, sample_weight, sample_mask, random_state, X_idx_sorted, X_csc, X_csr)\u001b[0m\n\u001b[0;32m    786\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    787\u001b[0m                 tree.fit(X, residual, sample_weight=sample_weight,\n\u001b[1;32m--> 788\u001b[1;33m                          check_input=False, X_idx_sorted=X_idx_sorted)\n\u001b[0m\u001b[0;32m    789\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    790\u001b[0m             \u001b[1;31m# update tree leaves\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\users\\asus\\appdata\\local\\programs\\python\\python3.6.5\\lib\\site-packages\\sklearn\\tree\\tree.py\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, X, y, sample_weight, check_input, X_idx_sorted)\u001b[0m\n\u001b[0;32m   1122\u001b[0m             \u001b[0msample_weight\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msample_weight\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1123\u001b[0m             \u001b[0mcheck_input\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcheck_input\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1124\u001b[1;33m             X_idx_sorted=X_idx_sorted)\n\u001b[0m\u001b[0;32m   1125\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1126\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\users\\asus\\appdata\\local\\programs\\python\\python3.6.5\\lib\\site-packages\\sklearn\\tree\\tree.py\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, X, y, sample_weight, check_input, X_idx_sorted)\u001b[0m\n\u001b[0;32m    240\u001b[0m             \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"max_depth must be greater than zero. \"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    241\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m \u001b[1;33m<\u001b[0m \u001b[0mmax_features\u001b[0m \u001b[1;33m<=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mn_features_\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 242\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"max_features must be in (0, n_features]\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    243\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmax_leaf_nodes\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mnumbers\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mIntegral\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minteger\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    244\u001b[0m             raise ValueError(\"max_leaf_nodes must be integral number but was \"\n",
+      "\u001b[1;31mValueError\u001b[0m: max_features must be in (0, n_features]"
+     ]
+    }
+   ],
+   "source": [
+    "clf = GradientBoostingRegressor(loss='lad', learning_rate=0.2,\n",
+    "                               max_depth=4,)\n",
     "clf.fit(train_x, train_y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 154,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predict 6.022316133377997, labels 6\n",
-      "Predict 6.179363820970485, labels 6\n",
-      "Predict 12.397021877053094, labels 12\n",
-      "Predict 0.23262833771536454, labels 0\n",
-      "Predict 13.223374768560294, labels 13\n",
-      "Predict 8.995948477022658, labels 9\n",
-      "Predict 6.022316133377997, labels 6\n",
-      "Predict 8.995948477022658, labels 8\n",
-      "Predict 11.658411342660076, labels 12\n",
-      "Predict 0.006063371049064589, labels 0\n",
-      "Predict 0.7769754093019112, labels 1\n",
-      "Predict 10.976236003373401, labels 11\n",
-      "Predict 0.9374502131359876, labels 1\n",
-      "Predict 10.002864379205464, labels 9\n",
-      "Predict 3.720628855574921, labels 3\n",
-      "Predict 6.992665174748736, labels 7\n",
-      "Predict 2.0120518107750787, labels 2\n",
-      "Predict 11.664674588625694, labels 12\n",
-      "Predict 0.9374502131359876, labels 1\n",
-      "Predict 2.3696431544259844, labels 2\n",
-      "Predict 6.172626284334054, labels 6\n",
-      "0.8571428571428571\n",
-      "0.9916893085533858\n"
+      "Predict 12.84, labels 14\n",
+      "Predict 1.00, labels 1\n",
+      "Predict 1.00, labels 1\n",
+      "Predict 13.15, labels 14\n",
+      "Predict 1.69, labels 2\n",
+      "Predict 6.90, labels 7\n",
+      "Predict 1.97, labels 3\n",
+      "Predict 12.70, labels 12\n",
+      "Predict 8.41, labels 9\n",
+      "Predict 11.68, labels 12\n",
+      "Predict 12.70, labels 12\n",
+      "0.2727272727272727\n",
+      "0.9834026776421096\n"
      ]
     }
    ],
    "source": [
+    "from sklearn.metrics import r2_score\n",
     "# testing \n",
     "accuracy = 0\n",
     "for i in range(len(test_x)):\n",
     "    y_predict = clf.predict([test_x[i]])\n",
-    "    print('Predict {}, labels {}'.format(y_predict[0],test_y[i]))\n",
-    "    # with 1 margin point\n",
-    "    if(abs(y_predict[0] - test_y[i]) <= 0.5):\n",
+    "    print('Predict {:.2f}, labels {}'.format(y_predict[0],test_y[i]))\n",
+    "    # add some margin\n",
+    "    if(abs(y_predict[0] - test_y[i]) <= 0.3):\n",
     "        accuracy += 1\n",
     "accuracy = float(accuracy/len(test_x))\n",
     "print(accuracy)\n",
     "# return the mean accuracy on the given test data and labels\n",
-    "print(clf.score(test_x, test_y))"
+    "r2 = r2_score(test_y, clf.predict(test_x))\n",
+    "print(r2)\n",
+    "# overfitting !"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['gradient_regression_85.pkl']"
+       "['gradient_regression_85.pickle']"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# save tree model \n",
-    "joblib.dump(clf,'gradient_regression_85.pkl')"
+    "# save model \n",
+    "joblib.dump(clf,'saved_models//gradient_regression_85.pickle')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pickle save model\n",
+    "number = 2\n",
+    "model_pickle = open('saved_models//model-{:.2f}-v{}.pickle'.format(r2, number),'wb')\n",
+    "pickle.dump(clf, model_pickle)\n",
+    "model_pickle.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
