neural network model

--- a/unsupervised_lerning.ipynb
+++ b/unsupervised_lerning.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -70,39 +70,39 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>180</th>\n",
-       "      <td>1</td>\n",
-       "      <td>76</td>\n",
-       "      <td>222</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>176</th>\n",
-       "      <td>164</td>\n",
-       "      <td>78</td>\n",
-       "      <td>90</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>113</th>\n",
-       "      <td>117</td>\n",
-       "      <td>182</td>\n",
-       "      <td>43</td>\n",
+       "      <th>98</th>\n",
+       "      <td>107</td>\n",
+       "      <td>180</td>\n",
+       "      <td>34</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>100</th>\n",
-       "      <td>205</td>\n",
-       "      <td>144</td>\n",
-       "      <td>70</td>\n",
-       "      <td>10</td>\n",
+       "      <th>125</th>\n",
+       "      <td>67</td>\n",
+       "      <td>185</td>\n",
+       "      <td>72</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>62</th>\n",
-       "      <td>0</td>\n",
-       "      <td>165</td>\n",
-       "      <td>254</td>\n",
+       "      <th>12</th>\n",
+       "      <td>180</td>\n",
+       "      <td>38</td>\n",
+       "      <td>51</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>17</td>\n",
+       "      <td>198</td>\n",
+       "      <td>248</td>\n",
        "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171</th>\n",
+       "      <td>67</td>\n",
+       "      <td>170</td>\n",
+       "      <td>43</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -110,14 +110,14 @@
       ],
       "text/plain": [
        "     blue  green  red  label\n",
-       "180     1     76  222      1\n",
-       "176   164     78   90     12\n",
-       "113   117    182   43      8\n",
-       "100   205    144   70     10\n",
-       "62      0    165  254      2"
+       "98    107    180   34      8\n",
+       "125    67    185   72      6\n",
+       "12    180     38   51     12\n",
+       "32     17    198  248      2\n",
+       "171    67    170   43      7"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,19 +131,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([10,  8, 11,  2, 13, 14, 11,  3,  5,  6, 11,  3,  7, 10,  0, 10,  0,\n",
-       "       11,  5,  9,  3, 14,  3,  1,  5, 10,  4, 12,  2,  7,  1,  2,  4,  9,\n",
-       "        8, 12, 12, 12,  6,  0, 14,  2,  9,  8,  6, 11, 10,  3,  5, 12,  4,\n",
-       "        3,  8, 10, 13,  5])"
+       "((168, 3), (56, 3), (168,), (56,))"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,8 +150,7 @@
     "X = np.array(df.drop(['label'],axis=1))\n",
     "y = np.array(df['label'])\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y)\n",
-    "X_train.shape, X_test.shape, y_train.shape, y_test.shape\n",
-    "y_test"
+    "X_train.shape, X_test.shape, y_train.shape, y_test.shape"
    ]
   },
   {
