add more datasets

--- a/unsupervised_lerning.ipynb
+++ b/unsupervised_lerning.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,16 +21,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = LoadData(15)"
+    "data = LoadData(29)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,9 @@
      "output_type": "stream",
      "text": [
       "no image\n",
-      "(224, 4)\n"
+      "no image\n",
+      "no image\n",
+      "(432, 4)\n"
      ]
     },
     {
@@ -70,38 +72,38 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>98</th>\n",
+       "      <th>103</th>\n",
+       "      <td>157</td>\n",
+       "      <td>69</td>\n",
+       "      <td>99</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>159</th>\n",
+       "      <td>202</td>\n",
+       "      <td>133</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>198</td>\n",
+       "      <td>76</td>\n",
+       "      <td>0</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
        "      <td>107</td>\n",
        "      <td>180</td>\n",
        "      <td>34</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>125</th>\n",
-       "      <td>67</td>\n",
-       "      <td>185</td>\n",
-       "      <td>72</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>180</td>\n",
-       "      <td>38</td>\n",
-       "      <td>51</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>17</td>\n",
-       "      <td>198</td>\n",
-       "      <td>248</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>171</th>\n",
-       "      <td>67</td>\n",
-       "      <td>170</td>\n",
-       "      <td>43</td>\n",
+       "      <th>186</th>\n",
+       "      <td>34</td>\n",
+       "      <td>214</td>\n",
+       "      <td>19</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -110,14 +112,14 @@
       ],
       "text/plain": [
        "     blue  green  red  label\n",
-       "98    107    180   34      8\n",
-       "125    67    185   72      6\n",
-       "12    180     38   51     12\n",
-       "32     17    198  248      2\n",
-       "171    67    170   43      7"
+       "103   157     69   99     13\n",
+       "159   202    133    0     10\n",
+       "11    198     76    0     11\n",
+       "38    107    180   34      8\n",
+       "186    34    214   19      7"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,16 +133,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\asus\\appdata\\local\\programs\\python\\python3.6.5\\lib\\site-packages\\sklearn\\cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "((168, 3), (56, 3), (168,), (56,))"
+       "((324, 3), (108, 3), (324,), (108,))"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,62 +165,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[182.        ,  21.625     ,  65.625     ],\n",
-       "       [ 28.16666667, 215.        , 174.41666667],\n",
-       "       [ 98.44444444, 173.        ,  17.77777778],\n",
-       "       [ 33.875     ,  24.8125    , 225.625     ],\n",
-       "       [ 21.1875    , 185.3125    , 250.25      ],\n",
-       "       [185.26666667, 179.        ,   3.66666667],\n",
-       "       [  3.375     , 168.5       ,  26.625     ],\n",
-       "       [162.05263158,  76.26315789,  80.47368421],\n",
-       "       [ 28.        ,  98.61538462, 241.38461538],\n",
-       "       [ 71.53333333, 177.6       ,  61.93333333],\n",
-       "       [202.        , 142.25      ,  58.375     ],\n",
-       "       [ 58.85714286, 196.85714286, 132.28571429],\n",
-       "       [130.76923077,  32.92307692,  60.76923077],\n",
-       "       [227.75      ,  56.75      ,  19.5       ],\n",
-       "       [  5.8       , 236.4       , 242.2       ]])"
+       "array([[214.44444444,  64.61111111,  17.88888889],\n",
+       "       [ 21.41025641, 122.48717949, 244.25641026],\n",
+       "       [ 59.24074074, 174.92592593,  40.57407407],\n",
+       "       [151.76056338,  48.38028169,  67.95774648],\n",
+       "       [ 24.25      ,  17.60714286, 211.60714286],\n",
+       "       [ 31.42424242, 210.42424242, 150.96969697],\n",
+       "       [192.88372093, 160.65116279,  22.44186047],\n",
+       "       [  8.55263158, 221.97368421, 240.28947368]])"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.cluster import KMeans\n",
-    "clf = KMeans(n_c)\n",
+    "clf = KMeans()\n",
     "clf.fit(X_train)\n",
     "clf.cluster_centers_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 4,  0,  7, 12,  5, 10,  2,  8,  9,  9,  9,  3, 12, 14,  3,  0,  9,\n",
-       "        1,  8,  4,  0,  9,  7, 14,  4,  1, 10,  7,  4,  8, 10, 12, 12,  6,\n",
-       "        5,  7,  7,  9, 12, 14,  6,  1,  7, 10,  7, 11,  7,  4,  5,  7,  3,\n",
-       "        8,  5, 11,  3, 12,  7, 12,  4,  5,  1, 11,  0,  7,  8,  2, 12,  3,\n",
-       "        0,  6,  9,  1, 12,  3, 14,  6,  2,  9,  2,  4,  5,  9,  7,  6,  6,\n",
-       "       13,  7,  0,  5,  3,  2,  7,  2,  8,  3, 10,  3,  4, 11,  0,  4, 12,\n",
-       "        7,  9,  6,  3,  5,  4,  4,  3, 13, 12,  2,  0,  8,  1, 10,  9,  8,\n",
-       "        3,  7, 11,  5,  4, 10,  4,  5, 12,  9,  5,  5, 14,  4,  2,  7,  3,\n",
-       "        1, 13,  1,  3,  8, 10,  8,  1,  1,  8,  3,  2,  5,  9, 13,  8,  5,\n",
-       "        8,  7,  4,  6,  9,  1, 12,  3,  5,  7,  9,  1,  4, 11, 11])"
+       "array([5, 3, 4, 2, 3, 1, 3, 1, 1, 1, 2, 2, 3, 3, 3, 2, 4, 3, 5, 2, 6, 3,\n",
+       "       6, 2, 6, 5, 6, 1, 1, 1, 3, 1, 7, 1, 2, 2, 2, 1, 1, 1, 5, 3, 2, 4,\n",
+       "       4, 3, 3, 0, 6, 5, 1, 1, 7, 2, 4, 3, 6, 1, 1, 5, 5, 5, 4, 5, 4, 4,\n",
+       "       2, 2, 2, 3, 2, 2, 1, 1, 5, 3, 4, 5, 3, 3, 3, 3, 2, 1, 2, 6, 4, 3,\n",
+       "       3, 7, 2, 7, 6, 7, 6, 7, 6, 6, 3, 2, 3, 6, 6, 1, 3, 7, 4, 3, 0, 3,\n",
+       "       1, 1, 7, 2, 3, 0, 7, 6, 5, 6, 6, 1, 5, 6, 2, 4, 3, 3, 6, 3, 2, 0,\n",
+       "       2, 3, 3, 3, 2, 3, 7, 1, 1, 0, 4, 3, 6, 0, 7, 3, 5, 6, 6, 2, 3, 6,\n",
+       "       7, 3, 5, 3, 2, 2, 1, 3, 7, 5, 6, 5, 2, 7, 3, 2, 5, 6, 7, 1, 7, 5,\n",
+       "       1, 1, 4, 6, 3, 4, 2, 6, 3, 4, 6, 4, 7, 0, 6, 0, 5, 3, 3, 5, 4, 2,\n",
+       "       7, 2, 6, 7, 7, 3, 3, 3, 1, 5, 3, 0, 2, 2, 5, 1, 2, 7, 6, 4, 1, 4,\n",
+       "       0, 1, 4, 3, 6, 3, 2, 7, 6, 3, 7, 3, 3, 0, 2, 7, 6, 7, 5, 0, 0, 3,\n",
+       "       2, 0, 2, 5, 7, 5, 4, 0, 7, 7, 6, 5, 3, 1, 7, 2, 5, 2, 4, 4, 3, 7,\n",
+       "       6, 1, 0, 2, 7, 5, 3, 0, 5, 6, 7, 2, 3, 1, 5, 2, 4, 2, 3, 2, 6, 3,\n",
+       "       4, 2, 3, 7, 1, 0, 1, 1, 3, 2, 3, 3, 2, 6, 3, 2, 2, 6, 3, 3, 5, 5,\n",
+       "       3, 6, 6, 7, 2, 7, 7, 4, 7, 3, 7, 3, 6, 2, 4, 6])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,70 +229,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(56,)\n",
-      "Pred:5 real:10\n",
+      "(108,)\n",
+      "Pred:0 real:11\n",
+      "Pred:3 real:11\n",
+      "Pred:4 real:0\n",
+      "Pred:1 real:1\n",
+      "Pred:6 real:12\n",
       "Pred:2 real:8\n",
-      "Pred:7 real:11\n",
-      "Pred:8 real:2\n",
-      "Pred:12 real:13\n",
-      "Pred:12 real:14\n",
-      "Pred:7 real:11\n",
-      "Pred:14 real:3\n",
-      "Pred:11 real:5\n",
-      "Pred:1 real:6\n",
-      "Pred:13 real:11\n",
-      "Pred:14 real:3\n",
-      "Pred:6 real:7\n",
-      "Pred:5 real:10\n",
-      "Pred:3 real:0\n",
-      "Pred:10 real:10\n",
-      "Pred:3 real:0\n",
-      "Pred:13 real:11\n",
-      "Pred:11 real:5\n",
-      "Pred:10 real:9\n",
-      "Pred:14 real:3\n",
-      "Pred:12 real:14\n",
-      "Pred:14 real:3\n",
-      "Pred:8 real:1\n",
-      "Pred:11 real:5\n",
-      "Pred:13 real:10\n",
-      "Pred:14 real:4\n",
-      "Pred:7 real:12\n",
-      "Pred:4 real:2\n",
-      "Pred:9 real:7\n",
-      "Pred:8 real:1\n",
-      "Pred:4 real:2\n",
-      "Pred:14 real:4\n",
-      "Pred:5 real:9\n",
       "Pred:2 real:8\n",
-      "Pred:7 real:12\n",
-      "Pred:13 real:12\n",
-      "Pred:7 real:12\n",
-      "Pred:9 real:6\n",
-      "Pred:3 real:0\n",
-      "Pred:12 real:14\n",
+      "Pred:6 real:9\n",
+      "Pred:6 real:9\n",
+      "Pred:4 real:1\n",
+      "Pred:5 real:4\n",
       "Pred:4 real:2\n",
-      "Pred:5 real:9\n",
+      "Pred:5 real:5\n",
+      "Pred:3 real:14\n",
+      "Pred:3 real:13\n",
+      "Pred:7 real:3\n",
+      "Pred:6 real:9\n",
+      "Pred:3 real:10\n",
+      "Pred:4 real:0\n",
+      "Pred:3 real:13\n",
+      "Pred:2 real:7\n",
+      "Pred:7 real:3\n",
+      "Pred:3 real:12\n",
+      "Pred:4 real:0\n",
+      "Pred:3 real:12\n",
+      "Pred:7 real:3\n",
+      "Pred:2 real:6\n",
       "Pred:2 real:8\n",
-      "Pred:9 real:6\n",
-      "Pred:7 real:11\n",
-      "Pred:10 real:10\n",
-      "Pred:14 real:3\n",
-      "Pred:11 real:5\n",
+      "Pred:5 real:5\n",
+      "Pred:2 real:7\n",
+      "Pred:3 real:14\n",
+      "Pred:6 real:9\n",
+      "Pred:5 real:4\n",
+      "Pred:7 real:4\n",
+      "Pred:3 real:12\n",
+      "Pred:2 real:8\n",
+      "Pred:5 real:5\n",
+      "Pred:5 real:5\n",
+      "Pred:4 real:1\n",
+      "Pred:3 real:14\n",
+      "Pred:3 real:13\n",
+      "Pred:1 real:1\n",
+      "Pred:3 real:14\n",
+      "Pred:7 real:2\n",
+      "Pred:4 real:0\n",
+      "Pred:1 real:5\n",
+      "Pred:3 real:14\n",
+      "Pred:2 real:7\n",
       "Pred:0 real:12\n",
-      "Pred:14 real:4\n",
-      "Pred:14 real:3\n",
+      "Pred:5 real:5\n",
+      "Pred:4 real:1\n",
+      "Pred:7 real:5\n",
+      "Pred:6 real:10\n",
+      "Pred:3 real:14\n",
+      "Pred:3 real:14\n",
+      "Pred:2 real:7\n",
+      "Pred:5 real:5\n",
+      "Pred:2 real:7\n",
       "Pred:2 real:8\n",
-      "Pred:10 real:10\n",
-      "Pred:12 real:13\n",
-      "Pred:14 real:5\n"
+      "Pred:5 real:7\n",
+      "Pred:1 real:1\n",
+      "Pred:2 real:8\n",
+      "Pred:2 real:6\n",
+      "Pred:3 real:11\n",
+      "Pred:1 real:1\n",
+      "Pred:2 real:8\n",
+      "Pred:7 real:8\n",
+      "Pred:1 real:1\n",
+      "Pred:6 real:9\n",
+      "Pred:0 real:12\n",
+      "Pred:2 real:11\n",
+      "Pred:7 real:6\n",
+      "Pred:5 real:8\n",
+      "Pred:6 real:9\n",
+      "Pred:5 real:4\n",
+      "Pred:4 real:0\n",
+      "Pred:0 real:11\n",
+      "Pred:3 real:11\n",
+      "Pred:6 real:8\n",
+      "Pred:2 real:6\n",
+      "Pred:7 real:4\n",
+      "Pred:5 real:4\n",
+      "Pred:2 real:8\n",
+      "Pred:2 real:7\n",
+      "Pred:3 real:14\n",
+      "Pred:5 real:5\n",
+      "Pred:7 real:3\n",
+      "Pred:4 real:11\n",
+      "Pred:2 real:6\n",
+      "Pred:5 real:4\n",
+      "Pred:2 real:10\n",
+      "Pred:2 real:8\n",
+      "Pred:7 real:3\n",
+      "Pred:7 real:2\n",
+      "Pred:4 real:0\n",
+      "Pred:3 real:14\n",
+      "Pred:1 real:2\n",
+      "Pred:3 real:14\n",
+      "Pred:4 real:0\n",
+      "Pred:7 real:2\n",
+      "Pred:6 real:10\n",
+      "Pred:3 real:12\n",
+      "Pred:4 real:0\n",
+      "Pred:4 real:0\n",
+      "Pred:7 real:3\n",
+      "Pred:4 real:0\n",
+      "Pred:1 real:4\n",
+      "Pred:6 real:10\n"
      ]
     }
    ],
@@ -294,6 +354,13 @@
     "for i in range(len(y_pred)):\n",
     "    print('Pred:{} real:{}'.format(y_pred[i],y_test[i]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
